CodeEditor: fix styles
* Ensure the code editor doesn't hijacks clicks to the `Run` button.

* Ensure the `Run` button and the code editors scrollbars don't overlap.

* Ensure pane where the code editor is has a minimum size of 400px to
  avoid layout distortion.

* Ensure the code editor enables a horizontal scrollbar when needed.

Closes #248
Closes #274

--- a/static/css/Preview.css
+++ b/static/css/Preview.css
@@ -11,10 +11,13 @@ th, td {
     text-align: left;
 }
 
+.Pane.vertical {
+    overflow-x: auto;
+}
+
 .previewContainer {
     margin: 0 25px 25px 25px;
     overflow: auto;
-    overflow-x: hidden;
     border-radius: 3px;
 }
 
@@ -27,9 +30,10 @@ th, td {
 
 .runButton {
     position: absolute;
-    right: 10px;
-    bottom: 10px;
+    right: 18px;
+    bottom: 18px;
     width: 70px;
+    z-index: 10;
 }
 
 .errorStatus p {
